ensure the create account button text never wraps (turning into two rows of text)

--- a/style.css
+++ b/style.css
@@ -136,9 +136,10 @@ input {
 }
 
 button {
-    width: 200px;
+    max-width: 200px;
     text-wrap: balance;
     font-size: 1rem;
     font-weight: bold;
     border-radius: 5px;
+    white-space: nowrap;
 }
